public/style.css
* {
  box-sizing: border-box;
}

html, body {
  margin: 0;
  padding: 0;
  font-family: "roboto", sans-serif;
  background-color: #f5f5f5;
  font-size: 50%;
}

h1 {
  color: #fff;
  font-size: 3.6rem;
  font-style: normal;
  font-weight: 900;
  margin-bottom: 0;
  line-height: 150%;
  margin-top: 0px;
}

h2 {
  color: #000;
  font-size: 3.6rem;
  font-style: normal;
  font-weight: 700;
  line-height: 150%;
  letter-spacing: -0.019em;
  margin: 0;
}

h3 {
  color: #000;
  font-size: 1.8rem;
  font-style: normal;
  font-weight: 700;
  line-height: 150%;
  letter-spacing: -0.019em;
  margin: 0;
}

p {
  font-size: 1.8rem;
  color: #6b6b6b;
  font-weight: 400;
  line-height: 150%;
  margin: 0;
}

main p {
  letter-spacing: -0.019em; /* -1.9% */
}

/* Nav Bar */
nav {
  width: 100vw;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
  position: fixed;
  z-index: 1000;
  background-color: white;
}

nav > div {
  width: 1126px;
  height: 100%;
  padding: 16px 32px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.nav-logo {
  height: 45px;
  width: 140px;
}

.nav-links {
  display: none;
  height: 34px;
  justify-content: center;
  align-items: center;
  gap: 24px;
  list-style: none;
}

.nav-links > li > a {
  text-decoration: none;
  text-align: center;
  font-size: 1.4rem;
  color: black;
}

.login-button {
  text-decoration: none;
  display: flex;
  width: 100px;
  height: 36px;
  padding: 14px 38px;
  justify-content: center;
  align-items: center;
  border-radius: 8px;
  color: white !important;
  background: #cf1d2d;
  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
}

.nav-links li:last-child a:hover {
  filter: brightness(90%);
}

/* Hamburger menu */
#hamburger-menu {
  cursor: pointer;
  display: block; /* Ensure it shows up on mobile */
}

/* Popup menu (initially hidden) */
.popup-menu {
  display: none; /* Initially hidden */
  position: fixed;
  top: 80px;
  right: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(255, 255, 255, 0.9);
  z-index: 999;
  transition: all 0.3s ease-in-out; /* Add a transition effect */
}

.popup-menu.active {
  display: block; /* Show the popup when active */
  right: 0;
  top: 80px; /* Ensure correct positioning */
}

.popup-nav-links {
  list-style: none;
  padding: 32px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
}

.popup-nav-links > li > a {
  font-size: 1.8rem;
  text-align: center;
  padding: 12px;
  color: black;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.popup-nav-links > li > a:hover {
  color: #cf1d2d; /* Add a hover effect for the links */
}

/* Close button for the popup (optional for improved UX) */
.popup-menu-close {
  position: absolute;
  top: 20px;
}

/* Footer */
footer {
  width: 100vw;
  background-color: white;
  padding: 64px 32px;
}

.footer-content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 64px;
  align-items: center;
}

.footer-description {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  align-self: stretch;
}

.footer-logo {
  max-width: 300px;
  max-height: 90px;
}

.footer-info {
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: flex-start;
}

.footer-info h3{
  margin-bottom: 12px;
}

.footer-section a {
  color: inherit;
  text-decoration: none;
  margin-bottom: 4px;
}

.footer-section p {
  margin-bottom: 4px;
}

.social-icon {
  max-width: 30px;
  max-height: 30px;
  margin-right: 8px;
}

footer {
  text-align: center;
}

/* Summer Courses */

.banner {
  filter: brightness(70%);
  width: 100%;
  height: calc(100vw / 3.5);
  min-height: 340px;
  max-height: 500px;
  object-fit: cover;

}

#center-header-div {
  display: flex;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: calc(100vw / 3.5);
  min-height: 340px;
  max-height: 500px;
  padding-left: 24px;
  padding-right: 24px;
  justify-content: center;
  align-items: flex-end;
  padding-bottom: 64px;
}

#header-text-div-1 {
  display: flex;
  width: 100vw;
  max-width: 1126px;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-start;
}

.header-text {
  line-height: 100%;
  margin: 0;
}

.page-desc {
  margin-top: 16px;
  color: #fff;
}

#intro-desc {
  margin-top: 0;
  padding: 0;
  color: #6b6b6b;
  font-family: Roboto;
  font-size: 1.8;
  font-style: normal;
  font-weight: 400;
  line-height: 150%; /* 27px */
  letter-spacing: -0.342px;
}

.centered-section {
  display: flex;
  width: 100vw;
  /* width: 1440px; */
  flex-direction: column;
  align-items: center;
  gap: 64px;
  margin-bottom: 64px;
}

#course-gallery {
  display: inline-flex;
  height: 610.886px;
  align-items: flex-start;
  gap: 38px;
  flex-shrink: 0;
  margin-top: 32px;
}

#course-gallery button p {
  color: white;
}

.course {
  display: flex;
  width: 300px;
  height: 610.886px;
  flex-direction: column;
  align-items: flex-start;
  gap: 21px;
}

.course-info {
  display: flex;
  height: auto;
  flex-direction: column;
  align-items: flex-start;
  gap: 16px;
  flex-shrink: 0;
  align-self: stretch;
}

.course-img {
  display: flex;
  height: 300px;
  justify-content: center;
  align-items: center;
  gap: 8px;
  flex-shrink: 0;
  align-self: stretch;
  border-radius: 7.692px;
  background: lightgray 50% / cover no-repeat;
  box-shadow: 0px 1.282px 2.564px 0px rgba(0, 0, 0, 0.25);
  object-fit: cover;
}

.course-name {
  align-self: stretch;
  margin: 0;
}

.course-desc {
  align-self: stretch;
  margin: 0;
}
/* ... */

